--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimerActivity"></activity>
+        <activity android:name=".TimerActivity" android:theme="@style/Theme.Transparent"></activity>
 
         <service
             android:name=".ForegroundService"
